@@ -33,12 +33,18 @@
 #if(!defined SLP_DA_H_INCLUDED)
 #define SLP_DA_H_INCLUDED
 
+#ifdef WIN32
+#include <windows.h>
+#include <io.h>
+#else
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
 #include <netinet/in.h>
+#endif
 
 #include <slp_linkedlist.h>
+
 
 /*=========================================================================*/
 typedef struct _SLPDAEntry
