@@ -8,6 +8,9 @@ major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
 
+09/05/00 mpeterson@calderasystems.com
+Merged Mattieu Desmons's Win32 port of OpenSLP
+
 09/05/00 rganesan@myrealbox.com
 SLPFindSrvTypes() implemented (both server and client side)
 	
